test/Fail/BuiltinSucWarning.agda
module BuiltinSucWarning where

data Nat : Set where
  zero : Nat
  suc  : (n : Nat) → Nat

{-# BUILTIN NATURAL Nat #-}
{-# BUILTIN ZERO zero #-}
{-# BUILTIN SUC suc #-}

foo : Nat
foo = 13

